# mystic-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  analysis.ipynb  botBattle.ipynb  config.yml.default  custom.py  display.py  game.ipynb  homemade.py  requirements.txt  result.json
.github/workflows/: scorecard.yml
bots/: README
default/: board.json  custom.py
engines/: README
lib/: conversation.py  engine_wrapper.py  lichess_bot.py  matchmaking.py
notebooks/: analysis.ipynb  benchmark.ipynb  botBattle.ipynb  game.ipynb  lib.py  lichess.py  maps.ipynb  neuralChess.ipynb  neuralScore.ipynb  opening.ipynb  test_homemade.py
robot/: piece-score  piece-score-bot  position-score  position-score-bot  random-bot  sorted-eval-bot
sample/: 0.json  1.json  10.json  11.json  12.json  13.json  1321272.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  2686292.json  28.json  3.json  3038700.json  31.json  3260827.json  36.json  37.json  38.json  3989779.json  4.json  5.json  5952219.json  6.json  6687695.json  6705710.json  6903566.json  7.json  7250529.json  7316870.json  (+14 more)
sample/perft/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  (+391 more)
src/: gethash.rs  helper.rs  lib.rs  main.rs
(+54 files in other folders)
