[package]
name = "mystic-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.137"
rand = "0.8.5"
flate2 = "*"
tar = "*"
random_choice = "*"
fen = "*"
rayon = "*"
once_cell = "1.20.2"
